--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ cycler==0.10.0
 docutils==0.15.2
 Flask==1.1.1
 Flask-Cors==3.0.10
+gevent==21.1.2
 greenlet==1.0.0
 gunicorn==20.1.0
 idna==2.10
@@ -41,3 +42,5 @@ TikTokApi==3.9.5
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 Werkzeug==1.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
