--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,52 @@ urllib3==1.26.4
 Werkzeug==1.0.1
 zope.event==4.5.0
 zope.interface==5.4.0
+aniso8601==9.0.1
+aws-role-credentials==0.6.4
+awscli==1.19.51
+beautifulsoup4==4.9.3
+boto==2.49.0
+boto3==1.17.52
+botocore==1.20.52
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.3
+cycler==0.10.0
+docutils==0.15.2
+Flask==1.1.1
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.8
+gevent==21.1.2
+greenlet==1.0.0
+gunicorn==20.1.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jmespath==0.10.0
+kiwisolver==1.3.1
+MarkupSafe==1.1.1
+matplotlib==3.4.1
+numpy==1.20.2
+oktaauthpy3==0.8
+Pillow==8.2.0
+playwright==1.8.0a1
+pyasn1==0.4.8
+pyee==8.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
+rsa==4.7.2
+s3transfer==0.3.7
+selenium==3.141.0
+selenium-stealth==1.0.6
+six==1.15.0
+soupsieve==2.2.1
+TikTokApi==3.9.5
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+Werkzeug==1.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
