--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/.pnp
+/.
 .pnp.js
 
 # testing
@@ -8,6 +8,7 @@
 
 
 # misc
+node_modules
 .DS_Store
 .env.local
 .env.development.local
